--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
                 <p>-週年慶花式咖啡買一送一</p>
             </div>
             <div>
-                <img src="./未命名-2.png" alt="活動資訊1">
-                <h2>2020.06.10</h2>
-                <p>-週年慶花式咖啡買一送一</p>
+                <img src="./未命名-3.png" alt="活動資訊1">
+                <h2>2020.07.20~07.31</h2>
+                <p>-振興三倍券享美式8折</p>
             </div>
             <div>
-                <img src="./未命名-2.png" alt="活動資訊1">
-                <h2>2020.06.10</h2>
-                <p>-週年慶花式咖啡買一送一</p>
+                <img src="./未命名-4.png" alt="活動資訊1">
+                <h2>2020.07.26</h2>
+                <p>-拉花教學課程</p>
             </div>
             <div>
-                <img src="./未命名-2.png" alt="活動資訊1">
-                <h2>2020.06.10</h2>
-                <p>-週年慶花式咖啡買一送一</p>
+                <img src="./未命名-5.png" alt="活動資訊1">
+                <h2>2020.0８</h2>
+                <p>-告別Monday Blue,8月每週一咖啡系列8折</p>
             </div>
             <div>
-                <img src="./未命名-2.png" alt="活動資訊1">
-                <h2>2020.06.10</h2>
-                <p>-週年慶花式咖啡買一送一</p>
+                <img src="./未命名-6.png" alt="活動資訊1">
+                <h2>2020.0８</h2>
+                <p>-甜點同價位第二件六折</p>
             </div>
             <div>
-                <img src="./未命名-2.png" alt="活動資訊1">
-                <h2>2020.06.10</h2>
-                <p>-週年慶花式咖啡買一送一</p>
+                <img src="./未命名-7.png" alt="活動資訊1">
+                <h2>2020.0８.06</h2>
+                <p>-咖啡豆認識活動</p>
             </div>
         </section>
     </div>
